--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,6 @@
-h1 Home#index
-p Find me in app/views/home/index.html.slim
+- name = current_user.present? ? current_user.email : 'Stranger'
+h1
+  | Welcome, 
+  = name
+
+=link_to "Products", products_path
